--- a/index.html
+++ b/index.html
@@ -1,108 +1,46 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>David Chu's China Bistro</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-  </head>
-<body>
-  <header>
-    <nav id="header-nav" class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <a href="index.html" class="pull-left visible-md visible-lg">
-            <div id="logo-img" alt="Logo image"></div>
-          </a>
+<! DOCTYPE html>
+<Html>
+<Head>
+	<Meta charset = "utf-8">
 
-          <div class="navbar-brand">
-            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
-            <p>
-              <img src="images/star-k-logo.png" alt="Kosher certification">
-              <span>Kosher Certified</span>
-            </p>
-          </div>
+	<Meta name = "viewport" content = "width = device-width, initial-scale = 1">
 
-          <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        
-        <div id="collapsable-nav" class="collapse navbar-collapse">
-           <ul id="nav-list" class="nav navbar-nav navbar-right">
-            <li id="navHomeButton" class="visible-xs active">
-              <a href="index.html">
-                <span class="glyphicon glyphicon-home"></span> Home</a>
-            </li>
-            <li id="navMenuButton">
-              <a href="#" onclick="$dc.loadMenuCategories();">
-                <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
-            </li>
-            <li id="phone" class="hidden-xs">
-              <a href="tel:410-602-5008">
-                <span>410-602-5008</span></a><div>* We Deliver</div>
-            </li>
-          </ul><!-- #nav-list -->
-        </div><!-- .collapse .navbar-collapse -->
-      </div><!-- .container -->
-    </nav><!-- #header-nav -->
-  </header>
-
-  <div id="call-btn" class="visible-xs">
-    <a class="btn" href="tel:410-602-5008">
-    <span class="glyphicon glyphicon-earphone"></span>
-    410-602-5008
-    </a>
-  </div>
-  <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
-
-  <div id="main-content" class="container"></div>
-
-  <footer class="panel-footer">
-    <div class="container">
-      <div class="row">
-        <section id="hours" class="col-sm-4">
-          <span>Hours:</span><br>
-          Sun-Thurs: 11:15am - 10:00pm<br>
-          Fri: 11:15am - 2:30pm<br>
-          Saturday Closed
-          <hr class="visible-xs">
-        </section>
-        <section id="address" class="col-sm-4">
-          <span>Address:</span><br>
-          7105 Reisterstown Road<br>
-          Baltimore, MD 21215
-          <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
-          <hr class="visible-xs">
-        </section>
-        <section id="testimonials" class="col-sm-4">
-          <p>"The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
-          <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
-        </section>
-      </div>
-      <div class="text-center">&copy; Copyright David Chu's China Bistro 2016</div>
-    </div>
-  </footer>
-
-  <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/ajax-utils.js"></script>
-  <script src="js/script.js"></script>
-</body>
-</html>
+	<Link rel = "stylesheet" type = "text / javascript" src = "css / styles.css">
+	<Title> Module 2 Solution </ title>
+</ Head>
+<BODY>
+	<H1> Our Menu </ H1>
+	<Div class = "row">
+	<Div class = "container co-4 Ig co MD-6 co SM-12">
+		<Section>
+		<Div id = "chicken">
+			Beef
+		</ Div>
+		<P>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Soccer very sad film is now set, but said mass fermentation. However, at any ugly dui quiver football receives the developer running. But the present free ugly. Aliquam varius Mauris elit ipsum, vel sed laoreet leo rhoncus ac. Clinical at outdoor antioxidants. I need emergency, always laughed, and this becomes the dozens of takes, and the.
+		</ P>
+		</ Section>
+	</ Div>
+	<Div class = "container co-4 Ig co MD-6 co SM-12">
+		<Section>
+		<Div id = "beef">
+			beef
+		</ Div>
+		<P>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Soccer very sad film is now set, but said mass fermentation. However, at any ugly dui quiver football receives the developer running. But the present free ugly. Aliquam varius Mauris elit ipsum, vel sed laoreet leo rhoncus ac. Clinical at outdoor antioxidants. I need emergency, always laughed, and this becomes the dozens of takes, and the.
+		</ P>
+		</ Section>
+	</ Div>
+	<Div class = "container co-4 Ig co MD-12 co SM-12">
+		<Section>
+		<Div id = "Sushi">
+			Sushi
+		</ Div>
+		<P>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Soccer very sad film is now set, but said mass fermentation. However, at any ugly dui quiver football receives the developer running. But the present free ugly. Aliquam varius Mauris elit ipsum, vel sed laoreet leo rhoncus ac. Clinical at outdoor antioxidants. I need emergency, always laughed, and this becomes the dozens of takes, and the.
+		</ P>
+		</ Section>
+	</ Div>
+	</ Div>
+</ Body>
+</ Html>
